--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "hackathon-starter",
+  "name": "Sagacity",
   "version": "5.2.0",
-  "description": "A boilerplate for Node.js web applications",
+  "description": "An application that takes pictures or fragmented notes and converts them into high quality, readable and organized notes",
   "repository": {
     "type": "git",
     "url": "https://github.com/sahat/hackathon-starter.git"
@@ -55,6 +55,7 @@
     "node-sass": "^4.12.0",
     "node-sass-middleware": "^0.11.0",
     "nodemailer": "^6.3.0",
+    "nodemon": "^1.19.2",
     "passport": "^0.4.0",
     "passport-facebook": "^3.0.0",
     "passport-github": "^1.1.0",
