Added virtualenv conf and updated gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -28,6 +28,9 @@ public/js/lib/popper.min*
 # API keys and secrets
 .env
 
+#Virtualenv
+venv/
+
 # Dependency directory
 node_modules
 bower_components
