--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^5.10.1",
+    "@google-cloud/vision": "^1.3.0",
     "@ladjs/bootstrap-social": "^7.0.2",
     "@octokit/rest": "^16.28.7",
     "axios": "^0.19.0",
