--- a/package.json
+++ b/package.json
@@ -73,6 +73,7 @@
     "popper.js": "^1.15.0",
     "pug": "^2.0.4",
     "request": "^2.88.0",
+    "serve-favicon": "^2.5.0",
     "stripe": "^7.8.0",
     "tumblr.js": "^2.0.2",
     "twilio": "^3.33.3",
